--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
    <head>
       <!-- Required meta tags -->
+      <meta name="image" property="og:image" content="https://media.licdn.com/dms/image/C510BAQFuPilVoTFd9Q/company-logo_400_400/0?e=1576713600&v=beta&t=3s-hVL_fGjlQCFIEvBkyRel9v7tjZxW-m3Ma9rd1PiE">
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta name="description" content="invoid technologies(recogsquare pvt. ltd.) is using Computer Vision applications such as facial recognition to automate KYC & power enterprises to increase their business efficiency.">
+    <meta name="author" content="Recogsquare">
       <title>inVOID | Onboard authentic users instantly</title>
       <!-- Favicon -->
       <link rel="shortcut icon" href="images/favicon.ico">
