--- a/contact-us.html
+++ b/contact-us.html
@@ -4,7 +4,7 @@
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>In VOID | AI powered SaaS solutions</title>
+      <title>inVOID | AI powered SaaS solutions</title>
       <!-- Favicon -->
       <link rel="shortcut icon" href="images/favicon.ico">
       <!-- Bootstrap CSS -->
