--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
          Header -->
       <!--=================================
          Banner -->
-      <div id="banner1" class="banner" style="background-repeat:no-repeat; background-image:url(../invoidtest/images/banner/HomePageBanner_1440x780.jpg); background-color: #b9bed2">
+      <div id="banner1" class="banner" style="background-repeat:no-repeat; background-image:url(./images/banner/HomePageBanner_1440x780.jpg); background-color: #b9bed2">
          <div class="banner-text">
             <div class="container">
                <div class="row">
