--- a/features.html
+++ b/features.html
@@ -80,7 +80,7 @@
          Header -->
       <!--=================================
          Banner -->
-         <div id="banner" class="banner" style="background-image:url('./images/banner/Industry_1.jpg'); background-color: #cfd8fc; background-repeat: no-repeat">
+         <div id="banner" class="banner" style="background-image:url('./images/banner/Industry_1.jpg'); background-color: #cfd8fc; background-repeat: no-repeat; background-size:contain;">
          <div class="banner-text">
             <div class="container">
                <div class="row">
