--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Recogsquare">
       <title>inVOID | Onboard authentic users instantly </title>
       <!-- Favicon -->
-      <link rel="shortcut icon" href="images/favicon.ico">
+      <link rel="shortcut icon" href="images/ic_launcher_APP_white.png">
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- Magnific Popup CSS-->
