--- a/contact-us.html
+++ b/contact-us.html
@@ -6,8 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>inVOID | AI powered SaaS solutions</title>
       <!-- Favicon -->
-      <link rel="shortcut icon" href="images/favicon.ico">
-      <!-- Bootstrap CSS -->
+      <link rel="shortcut icon" href="images/ic_launcher_APP_white.png">      <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- Magnific Popup CSS-->
       <link rel="stylesheet" href="css/magnific-popup.css">
