--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>inVOID | How it works</title>
       <!-- Favicon -->
-      <link rel="shortcut icon" href="images/favicon.ico">
+      <link rel="shortcut icon" href="images/ic_launcher_APP_white.png">
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- Magnific Popup CSS-->
