changes isb image

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                   </div>
                   <div class="item">
                      <div class="clients-box text-center">
-                        <img class="img-fluid" src="images/clients/clients-img10.jpg" alt="image" data-toggle="tooltip" title="AIC ISB">
+                        <img class="img-fluid" src="images/clients/clients-img10.png" alt="image" data-toggle="tooltip" title="AIC ISB">
                      </div>
                   </div>
                   <div class="item">
@@ -311,7 +311,7 @@
                   </div>
                   <div class="item">
                      <div class="clients-box text-center">
-                        <img class="img-fluid" src="images/clients/clients-img10.jpg" alt="image" data-toggle="tooltip" title="AIC ISB">
+                        <img class="img-fluid" src="images/clients/clients-img10.png" alt="image" data-toggle="tooltip" title="AIC ISB">
                      </div>
                   </div>
                   <div class="item">
