--- a/about-us.html
+++ b/about-us.html
@@ -784,7 +784,7 @@
                                               </style>
                                         </div>
                                         <div class="mt-3 text-center">
-                                           <h4 class="title">Ishita Pasricha </h4>
+                                           <h4 class="title">Ishita</h4>
                                             <h5 class="title">Content Strategist</h5>
                                           <a class="read-more" href="https://www.linkedin.com/in/ishita-pasricha-a1808b100/">in</a>
                                          <!-- <p>You would lose track of things you came across if you started putting a count on Abinash’s skill set! He’s responsible for handling the technological backend of inVOID’s goals, which practically means that his work experience of more than 5 years is indispensable to everything that inVOID works for. </p> -->
