--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
       <meta name="description" content="invoid technologies(recogsquare pvt. ltd.) is using Computer Vision applications such as facial recognition to automate KYC & power enterprises to increase their business efficiency.">
     <meta name="author" content="Recogsquare">
       <title>inVOID | Onboard authentic users instantly </title>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131064399-1"></script>
+      <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+         gtag('config', 'UA-131064399-1');
+      </script>
       <!-- Favicon -->
       <link rel="shortcut icon" href="images/ic_launcher_APP_white.png">
       <!-- Bootstrap CSS -->
