--- a/technology.html
+++ b/technology.html
@@ -229,11 +229,11 @@ People responsible for manually verifying applications and filling in forms have
          <section class="tech-ptb" >
             <div class="container">
                <div class="row align-items-center">
-                  <div class="col-lg-12"> 
+                  <div class="col-lg-6"> 
                      <!-- change to 6 for image -->
-                     <!-- <img src="images/about/05.jpg" class="img-fluid" alt="images"> -->
+                     <img src="images/gifs/AI powered.gif" class="img-fluid" alt="images">
                   </div>
-                  <div class="col-lg-12">
+                  <div class="col-lg-6">
                     <!-- change to 6 for image -->
                          <div class="title-box">
                         <h2 class="title-light text-dark"><span>AI Powered</span></h2>
