--- a/technology.html
+++ b/technology.html
@@ -114,12 +114,12 @@
          <section class="tech-ptb pb-0">
             <div class="container">
                <div class="row align-items-center">
-                  <!-- <div class="col-lg-6"> -->
-                     <div class="col-lg-12">
-                     <!-- <img src="images/about/03.jpg" class="img-fluid" alt="images"> -->
+                  <div class="col-lg-6">
+                     <!-- <div class="col-lg-12"> -->
+                     <img src="images/gifs/API.gif" class="img-fluid" alt="images">
                   </div>
-                  <!-- <div class="col-lg-6"> -->
-                     <div class="col-lg-12">
+                  <div class="col-lg-6">
+                     <!-- <div class="col-lg-12"> -->
                   
                         <!--<div class="tech-no">01</div>-->
                    
