--- a/technology.html
+++ b/technology.html
@@ -172,11 +172,11 @@ inVOID’s dedicated servers provide you instant API integration, making sure yo
          <section class="tech-ptb" style="background-color:#f5f6ff !important">
             <div class="container">
                <div class="row flex-row-reverse align-items-center">
-                  <div class="col-lg-12 text-right">
+                  <div class="col-lg-6 text-right">
                      <!-- change to 6 for image -->
-                     <!-- <img src="images/gifs/giphy.gif" class="img-fluid" alt="images"> -->
+                     <img src="images/gifs/OCR.gif" class="img-fluid" alt="images">
                   </div>
-                  <div class="col-lg-12">
+                  <div class="col-lg-6">
                   <!-- change to 6 for image -->
                            <div class="title-box">
                         <h2 class="title-light text-dark"><span>Optical Character Recognition (OCR)</span></h2>
