--- a/product.html
+++ b/product.html
@@ -49,23 +49,23 @@
                      <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav ml-auto">
                            <li class="nav-item">
-                              <a class="nav-link " style="color:white" href="index.html">Home</a>
+                              <a class="nav-link " style="color:grey" href="index.html">Home</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link active" style="color:white" href="product.html">Product</a>
+                              <a class="nav-link active" style="color:grey" href="product.html">Product</a>
                            </li>
                              <li class="nav-item">
-                              <a class="nav-link" style="color:white" href="technology.html">Technology</a>
+                              <a class="nav-link" style="color:grey" href="technology.html">Technology</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" style="color:white" href="features.html">Industry</a>
+                              <a class="nav-link" style="color:grey" href="features.html">Industry</a>
                            </li>
                          
                            <li class="nav-item">
-                              <a class="nav-link" style="color:white" href="about-us.html">Company</a>
+                              <a class="nav-link" style="color:grey" href="about-us.html">Company</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" style="color:white" href="contact-us.html">Contact</a>
+                              <a class="nav-link" style="color:grey" href="contact-us.html">Contact</a>
                            </li>
                        
                         </ul>
@@ -93,7 +93,7 @@
 verifies if it is authentic, checks if the
 customer is real and protects
 millions of cases of fraudulent information.</h3> -->
-<h1 class=" cd-headline clip is-full-width" style="z-index:100; font-size:3em;">
+<h1 class=" cd-headline clip is-full-width" style="z-index:100; font-size:3em;line-height: 50px;">
       <span>"I want to verify my</span>
       <span class="cd-words-wrapper">
          <b class="is-visible">customers</b>
