--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                   </div>
                   <div class="item">
                      <div class="clients-box text-center">
-                        <img class="img-fluid" src="images/clients/clients-img5.png" alt="image" data-toggle="tooltip" title="tagtalk">
+                        <img class="img-fluid" src="https://s3.amazonaws.com/newpay1site/assets/SVG/ic_pay1_logo_original.svg" alt="image" data-toggle="tooltip" title="pay1">
                      </div>
                   </div>
                   <div class="item">
@@ -239,7 +239,7 @@
                   </div>
                   <div class="item">
                      <div class="clients-box text-center">
-                        <img class="img-fluid" src="images/clients/clients-img5.png" alt="image" data-toggle="tooltip" title="tagtalk">
+                        <img class="img-fluid" src="https://s3.amazonaws.com/newpay1site/assets/SVG/ic_pay1_logo_original.svg" alt="image" data-toggle="tooltip" title="pay1">
                      </div>
                   </div>
                   <div class="item">
