--- a/product.html
+++ b/product.html
@@ -83,7 +83,8 @@
       </header>
       <!--=================================
          Header -->
-         <div id="banner" class="banner" style="background-image:url('/invoidtest/images/banner/ai2.jpg'); background-color: navy">
+         <div id="banner" class="banner" style="background-image:url('/invoidtest/images/banner/ai2.jpg'); background-color: navy ; background-color: red;
+         background-image: linear-gradient(to right, navy , blue);">
          <div class="banner-text" style="padding-bottom:170px !important">
             <div class="container">
                <div class="row">
