--- a/product.html
+++ b/product.html
@@ -88,15 +88,16 @@
          <div class="banner-text" style="padding-bottom:170px !important">
             <div class="container">
                <div class="row">
-                  <div style = "text-align: center " class="col-lg-12 col-md-12 col-sm-12">
+                  <!-- <div style = "text-align: center " class="col-lg-12 col-md-12 col-sm-12"> -->
+                     <div class="col-lg-12 col-md-12 col-sm-12">
                      <!-- <h1 class="text-uppercase">Things that happen in a minute: </h1>
                      <h3 class="mt-4"> inVOID extracts information from a customer’s ID,
 verifies if it is authentic, checks if the
 customer is real and protects
 millions of cases of fraudulent information.</h3> -->
-<h1 class=" cd-headline clip is-full-width" style="z-index:100; font-size:3em;line-height: 50px;">
-      <span>"I want to verify my</span>
-      <span class="cd-words-wrapper">
+<h1 class=" cd-headline clip is-full-width" style="z-index:100; font-size:3.5em;line-height: 50px;">
+      <span style="font-family: 'Poppins-thin', sans-serif !important;" >"I want to verify my</span>
+      <span style="font-family: 'Poppins', sans-serif !important;"  class="cd-words-wrapper">
          <b class="is-visible">customers</b>
          <b>lenders</b>
          <b>users</b>
