messenger color change

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="283508545685906"
-  theme_color="#e69138"
+  theme_color="orange"
   logged_in_greeting="Hi! How can we help you?"
   logged_out_greeting="Hi! How can we help you?">
 </div>
