--- a/index.html
+++ b/index.html
@@ -240,7 +240,12 @@
                   </div>
                   <div class="item">
                         <div class="clients-box text-center">
-                            <img class="img-fluid" src="images/clients/clients-img17.png" alt="image" data-toggle="tooltip" title="Visionarch">
+                            <img class="img-fluid" src="images/clients/clients-img17.png" alt="image" data-toggle="tooltip" title="onTrack">
+                        </div>
+                     </div>
+                     <div class="item">
+                        <div class="clients-box text-center">
+                            <img class="img-fluid" src="https://nestaway-assets.akamaized.net/refonte/precompiled-assets/src/assets/images/common/nestawayLogo-eb150adf041954443b4ff9fcb97dad98.svg" alt="image" data-toggle="tooltip" title="Nestaway">
                         </div>
                      </div>
                   <div class="item">
@@ -278,6 +283,11 @@
                             <img class="img-fluid" src="images/clients/clients-img17.png" alt="image" data-toggle="tooltip" title="onTrack">
                         </div>
                      </div>
+                     <div class="item">
+                     <div class="clients-box text-center">
+                         <img class="img-fluid" src="https://nestaway-assets.akamaized.net/refonte/precompiled-assets/src/assets/images/common/nestawayLogo-eb150adf041954443b4ff9fcb97dad98.svg" alt="image" data-toggle="tooltip" title="Nestaway">
+                     </div>
+                  </div>
                </div>
             </div>
          </section>
