--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                   <div class="col-lg-12 col-sm-12 text-center">
                      <div class="title-box">
                         <!-- <h3 class="title text-dark" style="z-index:100;">Worldwide Our <span class="timer" data-to="6000" data-speed="5000">6000 +</span> Satisfied Client Using Chatbot</h3> -->
-                        <h3 class="title text-dark" style="z-index:100;">Investors and Technology Partners</h3>
+                        <h3 class="title text-dark" style="z-index:100;">Associations & Recognitions</h3>
                         <p class="mt-2">Those who back us</p>
                      </div>
                   </div>
@@ -339,7 +339,7 @@
                   </div>
                   <div class="item">
                      <div class="clients-box text-center">
-                         <img class="img-fluid" src="images/clients/clients-img15.png" alt="image" data-toggle="tooltip" title="Startup India">
+                         <img class="img-fluid" src="images/clients/clients-img18.png" alt="image" data-toggle="tooltip" title="Startup India">
                      </div>
                   </div>
                   <div class="item">
@@ -379,7 +379,7 @@
                   </div>
                   <div class="item">
                      <div class="clients-box text-center">
-                         <img class="img-fluid" src="images/clients/clients-img15.png" alt="image" data-toggle="tooltip" title="Startup India">
+                         <img class="img-fluid" src="images/clients/clients-img18.png" alt="image" data-toggle="tooltip" title="Startup India">
                      </div>
                   </div>
                   <div class="item">
