changing alt text

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                   </div>
                   <div class="item">
                      <div class="clients-box text-center">
-                         <img class="img-fluid" src="images/clients/clients-img18.png" alt="image" data-toggle="tooltip" title="Startup India">
+                         <img class="img-fluid" src="images/clients/clients-img18.png" alt="image" data-toggle="tooltip" title="NASSCOM Emerge50">
                      </div>
                   </div>
                   <div class="item">
@@ -379,7 +379,7 @@
                   </div>
                   <div class="item">
                      <div class="clients-box text-center">
-                         <img class="img-fluid" src="images/clients/clients-img18.png" alt="image" data-toggle="tooltip" title="Startup India">
+                         <img class="img-fluid" src="images/clients/clients-img18.png" alt="image" data-toggle="tooltip" title="NASSCOM Emerge50">
                      </div>
                   </div>
                   <div class="item">
