--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
   logged_in_greeting="Hi! How can we help you?"
   logged_out_greeting="Hi! How can we help you?">
 </div>
+<script>
+   function initFreshChat() {
+     window.fcWidget.init({
+       token: "e4b4bf9a-e40f-4149-b23f-7d52e93d94cc",
+       host: "https://wchat.freshchat.com"
+     });
+   }
+   function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
+ </script>
       <!--=================================
          Header -->
       <header id="header">
