removed fb messenger

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       
       <!-- loading End -->
-      <div id="fb-root"></div>
+      <!-- <div id="fb-root"></div>
 <script>
   window.fbAsyncInit = function() {
     FB.init({
@@ -63,16 +63,16 @@
   js = d.createElement(s); js.id = id;
   js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+}(document, 'script', 'facebook-jssdk'));</script> -->
 
 <!-- Your customer chat code -->
-<div class="fb-customerchat"
+<!-- <div class="fb-customerchat"
   attribution=setup_tool
   page_id="283508545685906"
   theme_color="#e69138"
   logged_in_greeting="Hi! How can we help you?"
   logged_out_greeting="Hi! How can we help you?">
-</div>
+</div> -->
 <script>
    function initFreshChat() {
      window.fcWidget.init({
