--- a/index.html
+++ b/index.html
@@ -254,6 +254,11 @@
                      </div>
                      <div class="item">
                         <div class="clients-box text-center">
+                            <img class="img-fluid" src="https://seeklogo.com/images/Z/zolo-stays-logo-68CC240AAC-seeklogo.com.png" alt="image" data-toggle="tooltip" title="Zolo">
+                        </div>
+                     </div>
+                     <div class="item">
+                        <div class="clients-box text-center">
                             <img class="img-fluid" src="https://nestaway-assets.akamaized.net/refonte/precompiled-assets/src/assets/images/common/nestawayLogo-eb150adf041954443b4ff9fcb97dad98.svg" alt="image" data-toggle="tooltip" title="Nestaway">
                         </div>
                      </div>
@@ -295,6 +300,11 @@
                   <div class="item">
                         <div class="clients-box text-center">
                             <img class="img-fluid" src="images/clients/clients-img17.png" alt="image" data-toggle="tooltip" title="onTrack">
+                        </div>
+                     </div>
+                     <div class="item">
+                        <div class="clients-box text-center">
+                            <img class="img-fluid" src="https://seeklogo.com/images/Z/zolo-stays-logo-68CC240AAC-seeklogo.com.png" alt="image" data-toggle="tooltip" title="Zolo">
                         </div>
                      </div>
                      <div class="item">
