--- a/index.html
+++ b/index.html
@@ -229,6 +229,11 @@
                   </div>
                   <div class="item">
                      <div class="clients-box text-center">
+                        <img class="img-fluid" src="https://www.shubhloans.com/img/logo/logo-row.svg" alt="image" data-toggle="tooltip" title="Shubh Loans">
+                     </div>
+                  </div>
+                  <div class="item">
+                     <div class="clients-box text-center">
                         <img class="img-fluid" src="images/clients/clients-img3.png" alt="image" data-toggle="tooltip" title="ONN Bikes">
                      </div>
                   </div>
@@ -275,6 +280,11 @@
                   <div class="item">
                      <div class="clients-box text-center">
                         <img class="img-fluid" src="images/clients/clients-img2.png" alt="image" data-toggle="tooltip" title="Mobycy">
+                     </div>
+                  </div>
+                  <div class="item">
+                     <div class="clients-box text-center">
+                        <img class="img-fluid" src="https://www.shubhloans.com/img/logo/logo-row.svg" alt="image" data-toggle="tooltip" title="Shubh Loans">
                      </div>
                   </div>
                   <div class="item">
