--- a/technology.html
+++ b/technology.html
@@ -27,6 +27,78 @@
             <img src="images/loader.gif" alt="loder">
          </div>
       </div>
+      <style>
+      .banner {
+	display: table;
+	width: 100%;
+	background-color: #171717;
+	color: #000;
+	line-height: 1.6;
+	position: relative;
+	font-family: sans-serif;
+	overflow: hidden;
+}
+
+.lines {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 100%;
+	margin: auto;
+	width: 90vw;
+}
+
+.lines .line {
+	position: absolute;
+	width: 1px;
+	height: 100%;
+	top: 0;
+	left: 50%;
+	background: rgba(255, 255, 255, 0.1);
+	overflow: hidden;
+}
+
+.lines .line::after {
+	content: '';
+	display: block;
+	position: absolute;
+	height: 15vh;
+	width: 100%;
+	top: -50%;
+	left: 0;
+	background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 75%, #ffffff 100%);
+	animation: run 7s 0s infinite;
+	animation-fill-mode: forwards;
+	animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+}
+
+.lines .line:nth-child(1) {
+	margin-left: -25%;
+}
+
+.lines .line:nth-child(1)::after {
+	animation-delay: 2s;
+}
+
+.lines .line:nth-child(3) {
+	margin-left: 25%;
+}
+
+.lines .line:nth-child(3)::after {
+	animation-delay: 2.5s;
+}
+
+@keyframes run {
+	0% {
+		top: -80%;
+	}
+
+	100% {
+		top: 200%;
+	}
+}
+      </style>
       <script>
          function initFreshChat() {
            window.fcWidget.init({
@@ -91,7 +163,13 @@
       <!--=================================
       Banner -->
      <div id="banner" class="banner" style="background-image:url('/invoidtest/images/banner/ai2.jpg'); background-color: black">
-         <div class="banner-text">
+      <div class="lines">
+         <div class="line"></div>
+         <div class="line"></div>
+         <div class="line"></div>
+       </div>
+          
+      <div class="banner-text">
             <div class="container">
                <div class="row">
                   <div class="col-lg-5 col-md-12 col-sm-12">
