--- a/technology.html
+++ b/technology.html
@@ -28,6 +28,9 @@
          </div>
       </div>
       <style>
+         html{
+            background-color: #fbfbfb;
+         }
       .banner {
 	display: table;
 	width: 100%;
@@ -175,7 +178,7 @@
                   <div class="col-lg-5 col-md-12 col-sm-12">
                      <h1 class="text-uppercase">You imagine it, and we create it.
  </h1>
-                     <h3 class="mt-4"> AI/ML solutions that can change your everyday. Leave your security concerns on the shoulders of inVOID’s intelligent, creative approach. </h3>
+                     <h3 style="color:slategrey !important" class="mt-4"> AI/ML solutions that can change your everyday. Leave your security concerns on the shoulders of inVOID’s intelligent, creative approach. </h3>
                    <!--  <form>
                         <div class="form-row align-items-center justify-content-lg-start justify-content-center">
                            <div class="col-auto">
@@ -198,7 +201,7 @@
       <!--=================================
       MAIN CONTENT -->
       <div class="main-content">
-         <section class="tech-ptb pb-0">
+         <section class="tech-ptb pb-0" style="background-color:#fbfbfb">
             <div class="container">
                <div class="row align-items-center">
                   <div class="col-lg-6">
@@ -255,8 +258,14 @@ inVOID’s dedicated servers provide you instant API integration, making sure yo
                   </div>
                </div>
             </div>
+              
          </section>
-         <section class="tech-ptb" style="background-color:#f5f6ff !important">
+         <div style="text-align: center; margin:60px 0px;">
+               <div style="border-top: 3px solid #dddddd;
+               width: 70%;
+               display: inline-block; background-color: #fbfbfb !important;"></div>   
+            </div>
+         <section class="tech-ptb pb-0 pt-0" style="background-color:#fbfbfb !important">
             <div class="container">
                <div class="row flex-row-reverse align-items-center">
                   <div class="col-lg-6 text-right">
@@ -313,7 +322,12 @@ People responsible for manually verifying applications and filling in forms have
                </div>
             </div>
          </section>
-         <section class="tech-ptb" >
+         <div style="text-align: center; margin:60px 0px;">
+               <div style="border-top: 3px solid #dddddd;
+               width: 70%;
+               display: inline-block; background-color: #fbfbfb !important;"></div>   
+            </div>
+         <section class="tech-ptb pt-0" style="background-color:#fbfbfb">
             <div class="container">
                <div class="row align-items-center">
                   <div class="col-lg-6"> 
