--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
        token: "e4b4bf9a-e40f-4149-b23f-7d52e93d94cc",
        host: "https://wchat.freshchat.com"
      });
+   window.fcWidget.open();
    }
    function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
  </script>
@@ -138,7 +139,8 @@
                         </h1> -->
                         <h1>Instant and Intelligent Verification Solutions That You Can Trust.
                            </h1>
-                     <h3 style="color:#fdcb8f !important" class="mt-4">Run your business smoothly  while we detect fraudulent information. Just leave customer-friendly authentication to our revolutionary AI-based solutions.
+                           <h3 class="mt-4" style="color:white">For VIDEO KYC, contact us <a href="mailto:hello@invoid.co?Subject=VIDEOKYC" target="_top">hello@invoid.co</a> <a href="+91-9891230291">+91-9891230291</a></h3>
+                           <h3 style="color:#fdcb8f !important" class="mt-4">Run your business smoothly  while we detect fraudulent information. Just leave customer-friendly authentication to our revolutionary AI-based solutions.
 
                         </h3>
                      <form>
