--- a/about-us.html
+++ b/about-us.html
@@ -174,7 +174,7 @@
                                           <div class="img-fluid team-1 flip-card">
                                                 <div class="flip-card-inner">
                                                   <div class="flip-card-front">
-                                                    <img style="width:260px; height:300px !important;" class="img-fluid team-1" src="images/team/team_sarthak.jpg" alt="Avatar">
+                                                    <img style="width:260px; height:300px !important;" class="img-fluid team-1" src="images/team/team_sarthak.jpeg" alt="Sarthak">
                                                   </div>
                                                   <div class="flip-card-back">
                                                     
