--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <header id="header">
          <div class="container">
             <div class="row align-items-center">
-               <div class="col-lg-9">
+               <div class="col-lg-12">
                   <nav class="navbar navbar-expand-lg navbar-light">
                      <a class="navbar-brand" href="index.html">
                      <img class="logo" src="images/logo.png" alt="image">
@@ -111,7 +111,9 @@
                            <li class="nav-item">
                               <a class="nav-link" href="features.html">Industry</a>
                            </li>
-                         
+                           <li class="nav-item">
+                                 <a style="font-weight: 700;"class="nav-link" href="videoKYC.html"><span style="background-color: #FFFF00">Video KYC</span></Video></a>
+                              </li>
                            <li class="nav-item">
                               <a class="nav-link" href="about-us.html">Company</a>
                            </li>
