--- a/videoKYC.html
+++ b/videoKYC.html
@@ -92,8 +92,8 @@
          Header -->
       <!--=================================
          Banner -->
-         <div id="banner" class="banner" style="height:100%; background-image:url('/invoidtest/images/banner/ProductBanner.jpg'); background-color: white">
-         <div class="banner-text">
+         <div id="banner" class="banner" style="background-image:url('/invoidtest/images/banner/ProductBanner.jpg'); background-color: white">
+         <div style="padding:0 !important" class="banner-text">
             <div class="container">
                <div class="row">
                   <div class="col-lg-12 col-md-12 col-sm-12">
