--- a/videoKYC.html
+++ b/videoKYC.html
@@ -155,7 +155,7 @@
                               </div>
                             <div style="padding-left:10px;" class="col-lg-6 col-md-12 r-mt3">
                                 <div>
-                                    <img class="img-fluid top-img1 i-size" src="images/banner/collage.jpg" alt="image">
+                                    <img class="img-fluid top-img1 i-size" src="images/banner/collage1.jpg" alt="image">
                                  </div>
                               </div>
                            </div>
