--- a/videoKYC.html
+++ b/videoKYC.html
@@ -4,7 +4,7 @@
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="inVOID technologies provides aacurate VIDEO KYC solution">
+      <meta name="description" content="inVOID technologies provides accurate VIDEO KYC solution">
     <meta name="author" content="Recogsquare">
       <title>inVOID | About us </title>
       <!-- Favicon -->
