--- a/videoKYC.html
+++ b/videoKYC.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="description" content="inVOID technologies provides accurate VIDEO KYC solution">
     <meta name="author" content="Recogsquare">
-      <title>inVOID | About us </title>
+      <title>inVOID | VIDEO KYC </title>
       <!-- Favicon -->
       <link rel="shortcut icon" href="images/ic_launcher_APP_white.png">      <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
