--- a/videoKYC.html
+++ b/videoKYC.html
@@ -4,9 +4,9 @@
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="inVOID technologies provides accurate VIDEO KYC solution">
+      <meta name="description" content="inVOID technologies provides accurate VIDEO KYC solution V-CIP">
     <meta name="author" content="Recogsquare">
-      <title>inVOID | VIDEO KYC </title>
+      <title>inVOID | VIDEO KYC / V-CIP </title>
       <!-- Favicon -->
       <link rel="shortcut icon" href="images/ic_launcher_APP_white.png">      <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
