--- a/about-us.html
+++ b/about-us.html
@@ -1246,7 +1246,7 @@
                                                        <div class="img-fluid team-1 flip-card">
                                                            <div class="flip-card-inner">
                                                              <div class="flip-card-front">
-                                                               <img class="img-fluid team-1" src="images/team/mentor_sukrit.png" alt="Avatar">
+                                                               <img class="img-fluid team-1" src="https://media-exp1.licdn.com/dms/image/C4D03AQFEWBK4s654HA/profile-displayphoto-shrink_200_200/0?e=1584576000&v=beta&t=l5JOUGpTgJRyu_i_JcAiE9r1tpifWV0HHlQbkf28ZBg" alt="Avatar">
                                                              </div>
                                                              <div class="flip-card-back">
                                                                
@@ -1298,11 +1298,12 @@
                                                               }
                                                         </style>
                                                      </div>
-                                                    <div class="mt-3 text-center">
+                                                    
+                                                     <div class="mt-3 text-center">
                                                        <div class="title-box">
-                                                          <h4 class="title text-dark"><span>Sukrit Sangwan</span></h4>
+                                                          <h4 class="title text-dark"><span>Pramod Jajoo</span></h4>
                                                           </div>
-                                                        <h5 class="title">5y+ experience AI/ML, ixigo, Paytm </h5>
+                                                        <h5 class="title">NASSCOM DTC Mentee, ex-CTO bigbasket.com, ex-Sun Microsystems  </h5>
                                                         <a class="read-more" href="https://www.linkedin.com/in/sukrit-sangwan-ba453545/">in</a>
                                                         <!-- <p>Senpai</p> -->
                                                     </div>
