--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                         </h1> -->
                         <h1>Instant and Intelligent Verification Solutions That You Can Trust.
                            </h1>
-                           <h3 class="mt-4" style="color:white">For VIDEO KYC, contact us <a href="mailto:hello@invoid.co?Subject=VIDEOKYC" target="_top">hello@invoid.co</a> <a href="tel:+91-9891230291">+91-9891230291</a></h3>
-                           <h3 style="color:#fdcb8f !important" class="mt-4">Run your business smoothly  while we detect fraudulent information. Just leave customer-friendly authentication to our revolutionary AI-based solutions.
+                           <h3 class="mt-4" style="color:white"><strong><a href="videoKYC.html">For VIDEO KYC, click here </a></strong></h3>
+                           <h3 style="color:#fdcb8f !important" class="mt-4">Run your business smoothly  while we detect fraudulent information. Just leave customer-friendly authentication to our <strong>revolutionary AI-based solutions.</strong>
 
                         </h3>
                      <form>
