--- a/videoKYC.html
+++ b/videoKYC.html
@@ -4,7 +4,7 @@
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="inVOID technologies provides accurate VIDEO KYC solution V-CIP">
+      <meta name="description" content="inVOID technologies provides accurate VIDEO KYC solution V-CIP. Digital KYC is now a reality after new RBI Guidelines which allow Video KYC (V-CIP). inVOID offers the most efficient Video KYC solution in the market. Our product is RBI compliant with Aadhaar XML Download made easy before Video KYC ">
     <meta name="author" content="Recogsquare">
       <title>inVOID | VIDEO KYC / V-CIP </title>
       <!-- Favicon -->
