--- a/about-us.html
+++ b/about-us.html
@@ -1220,7 +1220,7 @@
                                                        <div class="title-box">
                                                           <h4 class="title text-dark"><span>Pramod Jajoo</span></h4>
                                                           </div>
-                                                        <h5 class="title">NASSCOM DTC Mentee, ex-CTO bigbasket.com, ex-Sun Microsystems  </h5>
+                                                        <h5 class="title">NASSCOM DTC Mentor, ex-CTO bigbasket.com, ex-Sun Microsystems  </h5>
                                                         <a class="read-more" href="https://www.linkedin.com/in/sukrit-sangwan-ba453545/">in</a>
                                                         <!-- <p>Senpai</p> -->
                                                     </div>
