--- a/product.html
+++ b/product.html
@@ -31,7 +31,7 @@
             <img src="images/loader.gif" alt="loder">
          </div>
       </div>
-      <script>
+      <!-- <script>
          function initFreshChat() {
            window.fcWidget.init({
              token: "e4b4bf9a-e40f-4149-b23f-7d52e93d94cc",
@@ -39,7 +39,7 @@
            });
          }
          function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
-       </script>
+       </script> -->
       <!-- loading End -->
       <!--=================================
          Header -->
