--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="future-img">
                   <img src="images/feature/Efficient Conversion-01.jpg" class="img-fluid mb-4" alt="">
                 </div>
-                <h4 class="mb-3"  style="color:#2c539e">Efficient Conversion</h4>
+                <h4 class="mb-3"  style="color:black">Efficient Conversion</h4>
                 <p style="color:black" class="mb-0">Onboard and verify customers quicker. inVOID uses user-friendly technology which ensures that all a customer needs to access the verification portal is an ID and a smartphone.
 </p>
               </div>
@@ -186,7 +186,7 @@
                 <div class="future-img">
                   <img src="images/feature/Layers of Protection.jpg" class="img-fluid mb-4" alt="">
                 </div>
-                <h4 class="mb-3"  style="color:#2c539e">Ensured Customer Satisfaction</h4>
+                <h4 class="mb-3"  style="color:black">Ensured Customer Satisfaction</h4>
                 <p style="color:black"  class="mb-0">KYC won’t be a hassle for your customers anymore. inVOID’s assisted user flows guide the user every step of the way.
                </p>
               </div>
@@ -196,7 +196,7 @@
                 <div class="future-img">
                   <img src="images/feature/Background-01.jpg" class="img-fluid mb-4" alt="">
                 </div>
-                <h4 class="mb-3"  style="color:#2c539e">Smart Back-End Solutions</h4>
+                <h4 class="mb-3"  style="color:black">Smart Back-End Solutions</h4>
                 <p style="color:black"  class="mb-0">Let your business scale faster while also cutting down on costs and operations. inVOID's SaaS integration gives you complete transparency at every step.</p>
               </div>
             </div>
