--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                <div class="row justify-content-md-center">
                   <div class="col-sm-8 text-center">
                      <div class="title-box">
-                        <h2 class="title text-dark">Industry <span>Use Cases </span></h2>
+                        <h2 class="title text-dark">Industry <span style="color:black">Use Cases </span></h2>
                         <p class="mt-2"></p>
                      </div>
                   </div>
