--- a/about-us.html
+++ b/about-us.html
@@ -85,7 +85,7 @@
          Header -->
       <!--=================================
          Banner -->
-         <div id="banner" class="banner" style="background-image:url('/invoidtest/images/banner/117.jpg'); background-color: indianred">
+         <div id="banner" class="banner" style="background-image:url('/invoidtest/images/banner/117.jpg'); background-color: black">
          <div class="banner-text">
             <div class="container">
                <div class="row">
