--- a/contact-us.html
+++ b/contact-us.html
@@ -139,9 +139,10 @@
                <div class="row">
                   <div class="col-lg-6">
                      <div class="contact-box">
-                        <h3>Get in Touch</h3>
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdDmZlL5ZLriklHzmls8F6-v4DbS8bp_JeUQpQdz1aB5u--WA/viewform?embedded=true" width="500" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                        Unable to view the form? <a target="blank" href="https://forms.gle/x2Ko2JDyP3rrSp8r9">Visit the form</a>
+                        <!-- <h3>Get in Touch</h3> -->
+                        <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdDmZlL5ZLriklHzmls8F6-v4DbS8bp_JeUQpQdz1aB5u--WA/viewform?embedded=true" width="500" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                        Unable to view the form? <a target="blank" href="https://forms.gle/x2Ko2JDyP3rrSp8r9">Visit the form</a> -->
+                        <div class="typeform-widget" data-url="https://sarthak217564.typeform.com/to/KojhJf" data-transparency="50" data-hide-headers=true data-hide-footer=true style="width: 100%; height: 542px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=KojhJf&utm_source=typeform.com-01E5FA47MT7586BY05KCW4F8E4-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
                         <!-- <form class="p-0" id="contact">
                            <div class="contact-form mt-4">
                               <div class="row">
