--- a/videoKYC.html
+++ b/videoKYC.html
@@ -184,7 +184,8 @@
                            <div class="row justify-content-md-center mt-5">
                               <div class="col-lg-8 col-md-12 text-center">
                                  <div class="title-box">
-                                    <h2 class="title text-dark"><span>For demo contact : agrima@invoid.co<br> Call +91-9891230291 or tap on chat icon</span></h2>
+                                    <h2 class="title text-dark"><span>For demo contact : agrima@invoid.co<br> Call +91-9891230291 </span></h2>
+                                    <a href="contact-us.html">Contact Us</a>
                             
                                  </div>
                               </div>
