--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
                            <li class="nav-item">
                                  <a style="font-weight: 700;"class="nav-link" href="videoKYC.html"><span style="background-color: #FFFF00">Video KYC</span></Video></a>
                               </li>
-                           <li class="nav-item">
+                              <li class="nav-item">
+                                 <a class="nav-link" href="covid19.html">COVID19</a>
+                              </li>
+                              <li class="nav-item">
                               <a class="nav-link" href="about-us.html">Company</a>
                            </li>
                            <li class="nav-item">
@@ -141,7 +144,7 @@
                         </h1> -->
                         <h1>Instant and Intelligent Verification Solutions That You Can Trust.
                            </h1>
-                           <h3 class="mt-4" style="color:white"><strong><a href="videoKYC.html">For VIDEO KYC, click here </a></strong></h3>
+                           <h3 class="mt-4" style="color:black"><strong><a style="    color: orange;padding: 15px 30px;" class="button" href="videoKYC.html">For VIDEO KYC, click here </a></strong></h3>
                            <h3 style="color:#fdcb8f !important" class="mt-4">Run your business smoothly  while we detect fraudulent information. Just leave customer-friendly authentication to our <strong>revolutionary AI-based solutions.</strong>
 
                         </h3>
