--- a/technology.html
+++ b/technology.html
@@ -143,6 +143,9 @@
                            <li class="nav-item">
                                  <a style="font-weight: 700;"class="nav-link" href="videoKYC.html"><span style="background-color: #FFFF00">Video KYC</span></Video></a>
                               </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="covid19.html">COVID19</a>
+                              </li>
                            <li class="nav-item">
                               <a class="nav-link" href="about-us.html">Company</a>
                            </li>
