--- a/videoKYC.html
+++ b/videoKYC.html
@@ -74,6 +74,9 @@
                            <li class="nav-item ">
                             <a class="nav-link active" href="videoKYC.html">Video KYC</a>
                          </li>
+                         <li class="nav-item">
+                           <a class="nav-link" href="covid19.html">COVID19</a>
+                        </li>
                            <li class="nav-item ">
                               <a class="nav-link " href="about-us.html">Company</a>
                            </li>
